--- a/Views/Homeowner/Community.cshtml
+++ b/Views/Homeowner/Community.cshtml
@@ -173,15 +173,15 @@
     </div>
 </div>
 
-<!-- Comment Modal -->
-<div class="modal" id="commentModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
+<!-- Change the modal class from "modal" to "community-modal" -->
+<div class="community-modal" id="commentModal">
+    <div class="community-modal-dialog">
+        <div class="community-modal-content">
+            <div class="community-modal-header">
                 <h3>Comments</h3>
-                <button type="button" class="close-modal">&times;</button>
+                <button type="button" class="close-community-modal">&times;</button>
             </div>
-            <div class="modal-body">
+            <div class="community-modal-body">
                 <div class="comments-container" id="commentsContainer">
                     <!-- Comments will be loaded here -->
                 </div>
