--- a/wwwroot/css/admin/admin_layout.css
+++ b/wwwroot/css/admin/admin_layout.css
@@ -85,6 +85,31 @@ body {
     color: var(--accent);
 }
 
+/* Webkit Scrollbar Styles */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--light-gray);
+    border-radius: var(--border-radius);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--primary); /* Set to primary color */
+    border-radius: var(--border-radius);
+    transition: background-color var(--transition-speed);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--primary-dark); /* Darken the primary color on hover */
+}
+
+::-webkit-scrollbar-corner {
+    background-color: var(--white);
+}
+
 .toggle-sidebar {
     background: none;
     border: none;
