--- a/wwwroot/css/homeowners/dashboardhomeowners.css
+++ b/wwwroot/css/homeowners/dashboardhomeowners.css
@@ -32,6 +32,32 @@ body {
   background-color: var(--light-gray);
   color: var(--text-dark);
 }
+
+/* Webkit Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--light-gray);
+  border-radius: var(--border-radius);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--primary); /* Set to primary color */
+  border-radius: var(--border-radius);
+  transition: background-color var(--transition-speed);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--primary-dark); /* Darken the primary color on hover */
+}
+
+::-webkit-scrollbar-corner {
+  background-color: var(--white);
+}
+
 /* Navbar */
 .navbar {
   display: flex;
