--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -22,8 +22,8 @@
                     <i class="fas fa-users"></i>
                 </div>
                 <div class="stat-content">
-                    <h3>Currently Online</h3>
-                    <div class="stat-value">1,248</div>
+                    <h3>Currently Active</h3>
+                    <div class="stat-value">@ViewBag.ActiveCount</div>
                     <div class="stat-change positive">+12% from last month</div>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="stat-content">
                     <h3>Total Staff Members</h3>
-                    <div class="stat-value">42</div>
+                    <div class="stat-value">@ViewBag.StaffCount</div>
                     <div class="stat-change positive">+2 new hires</div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="stat-content">
                     <h3>Total Homeowners</h3>
-                    <div class="stat-value">856</div>
+                    <div class="stat-value">@ViewBag.HomeOwnerCount</div>
                     <div class="stat-change">98% occupancy</div>
                 </div>
             </div>
