feat [James]: display announcement

--- a/Views/Shared/Admin_Layout.cshtml
+++ b/Views/Shared/Admin_Layout.cshtml
@@ -51,7 +51,7 @@
                 
                 <!-- Announcements -->
                 <li class="nav-item">
-                    <a asp-controller="Admin" asp-action="Announcements" 
+                    <a asp-controller="Admin" asp-action="AdminAnnouncements" 
                     class="nav-link @(currentAction == "Announcements" ? "active" : "")">
                         <i class="fas fa-bullhorn nav-icon"></i>
                         <span class="nav-text">Announcements</span>
